syntax = "proto3";
option java_package = "collection";

// 用户
service SeckillCollectionService {
  // 创建
  rpc create(CollectionMessage.CreateCollectionReq) returns (CollectionMessage.CommonRely) {
  }
  // 更新
  rpc update(CollectionMessage.UpdateCollectionReq) returns (CollectionMessage.CommonRely) {
  }
}

message CollectionMessage{
  message CommonRely {
    int32 code = 1; // 状态码
  }
  message CreateCollectionReq {
    //用户id
    string user_id = 1;
    //
    string password = 2;
  }
  message UpdateCollectionReq {
    //用户名
    string user_name = 1;
    //用户密码
    string password = 2;
    //主键id
    string id = 3;
  }
}