syntax = "proto3";
option java_package = "person";

// 用户
service SeckillPersonService {
  // 注册
  rpc create(PersonMessage.CreatePersonReq) returns (PersonMessage.CommonRely) {
  }
  // 更新
  rpc update(PersonMessage.UpdatePersonReq) returns (PersonMessage.CommonRely) {
  }
  // 登陆
  rpc login(PersonMessage.PersonLoginReq) returns (PersonMessage.PersonLoginRely) {
  }
  // 判断用户名
  rpc findUserName(PersonMessage.findUserNameReq) returns (PersonMessage.CommonRely) {
  }
}

message PersonMessage{
  message CommonRely {
    int32 code = 1; // 状态码
  }
  message CreatePersonReq {
    //用户名
    string user_name = 1;
    //用户密码
    string password = 2;
  }
  message UpdatePersonReq {
    //用户名
    string user_name = 1;
    //用户密码
    string password = 2;
    //主键id
    string id = 3;
  }
  message PersonLoginReq {
    //用户名
    string user_name = 1;
    //用户密码
    string password = 2;
  }
  message PersonLoginRely {
    //状态码
    int32 code = 1;
    //用户信息
    PersonInfo person=2;
  }
  message PersonInfo {
    //用户名
    string user_name=1;
    //状态码
    string user_id=2;
  }
  message findUserNameReq {
    //用户名
    string user_name = 1;
  }
}